objects/BD_Extended_Warranty_Coverage__c.object
<CustomObject>
    <label>Extended Warranty Coverage</label>
    <nameField>
        <displayFormat>EWC-{00000000}</displayFormat>
        <label>Extended Warranty Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Warranty Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>BD_Covered_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Covered Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Covered_Until__c</fullName>
        <label>Covered Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BD_Parent_Work_Order__c</fullName>
        <label>Parent Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BD_Warranty_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Warranty_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Extended Warranty Coverages (Warranty Work Order)</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Extended_Warranty_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extended Warranty Part</label>
        <referenceTo>BD_Extended_Warranty_Part__c</referenceTo>
        <relationshipLabel>Extended Warranty Coverages</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Warranty_Contract_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Contract Item</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Extended Warranty Coverages (Warranty Contract Item)</relationshipLabel>
        <relationshipName>Extended_Warranty_Coverages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Create_Warranty_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Warranty Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Extended_Warranty_Description__c</fullName>
        <formula>&quot;Extended Warranty for: &quot; &amp; BD_Covered_Part__r.Name &amp; &quot; [&quot; &amp; BD_Covered_Part__r.Partnum__c &amp; &quot;] until &quot; &amp; TEXT(BD_Covered_Until__c) &amp; &quot; using coverage from Contract Item: &quot; &amp;  BD_Warranty_Contract_Item__r.Name</formula>
        <label>Extended Warranty Description</label>
        <type>Text</type>
    </fields>
</CustomObject>